# cmakeOpenGLTemplate

./: CMakeLists.txt
src/: main.cpp
